# tir-gfm-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tir_gfm_lite/: parser.py
tests/cases/help/: out-expected.txt  run.sh
tests/cases/parse-file/: out-expected.txt  run.sh
tests/cases/parse-file0/: out-expected.txt  run.sh
tests/cases/parse-file1/: out-expected.txt  run.sh
tests/cases/parse-gfm/: out-expected.txt  run.sh
tests/cases/parse-stdin/: out-expected.txt  run.sh
tests/cases/unparse/: out-expected.txt  run.sh
tests/data/: complex.tir  gfm.md  simple.md  table1.md
