[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tir-gfm-lite"
version = "0.1.2"
description = "GFM <-> TIR converter backend for tirenvi"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OGAWA Keiji" }]
dependencies = []

[project.scripts]
tir-gfm-lite = "tir_gfm_lite.cli:main"
